methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:22: error: type mismatch;
 found   : Boolean
 required: String
                            return printf(ok); }
                                          ^